# amazon-test-case

./: .env.prod.example  .gitignore  .mcp.json  .pre-commit-config.yaml  API_Design_Documentation.md  ARCHITECTURE.md  CLAUDE.md  COMPETITOR_ANALYSIS_IMPLEMENTATION.md  DATABASE_DESIGN.md  DESIGN_DECISIONS.md  Deployment_Architecture.md  IMPLEMENTATION_ROADMAP.md  Makefile  README.md  README_DEV.md  README_DEV_ENVIRONMENT.md  actor1_sample.json  alembic.ini  amazon_scraper_config.json  bsr_research_results.json  bsr_scraper_sample.json  competitor_analysis_report.md  coverage.xml  crawler_service_config.json  current_actor_sample.json  demo_products_data.json  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.simple.yml  end_to_end_test_report_20250912_120328.json  pyproject.toml  simple_test_report_20250912_113441.json  simple_test_report_20250912_113539.json  test-case.md  test_buy_box_price_fix.py  test_email_debug.py  tracking_report_20250912_122614.json  tracking_report_20250912_122736.json
.serena/: project.yml
alembic/: env.py
alembic/versions/: 20250912_010328_initial_schema.py  2025_09_12_0122-2b02360f3de8_add_complete_business_tables.py  2025_09_13_0006-52c225defbab_update_products_table_structure_to_.py  2025_09_13_0010-b69614c7697a_recreate_all_tables_with_correct_.py  2025_09_15_1425-f1c26c9be646_update_product_alert_model_for_restored_.py  2025_09_15_1454-73ee379373d6_remove_all_foreign_keys.py  2025_09_15_1532-c12157e470b5_remove_unused_model_files_competitor_.py  2025_09_15_1557-bda912b2771b_remove_competitor_set_tables.py
amazon_tracker/: __init__.py
amazon_tracker/common/: __init__.py
amazon_tracker/common/ai/: __init__.py  report_generator.py
amazon_tracker/common/analytics/: __init__.py  competitor_analyzer.py  competitor_data_manager.py  market_analyzer.py  report_generator.py
amazon_tracker/common/auth/: __init__.py  jwt_auth.py  models.py  permissions.py
amazon_tracker/common/cache/: __init__.py  redis_manager.py
amazon_tracker/common/config/: __init__.py  settings.py
amazon_tracker/common/crawlers/: __init__.py  apify_client.py  base.py  category_extractor.py  data_processor.py
amazon_tracker/common/database/: __init__.py  base.py  connection.py
amazon_tracker/common/database/models/: __init__.py  auth.py  crawl.py  product.py  task.py  tenant.py  user.py
amazon_tracker/common/logging/: __init__.py  logger.py  sentry_config.py
amazon_tracker/common/monitoring/: __init__.py  health_check.py  metrics.py  middleware.py
amazon_tracker/common/notification/: __init__.py  email_service.py
amazon_tracker/common/task_queue/: __init__.py  celery_app.py  celery_beat_config.py  crawler_tasks.py  monitoring_tasks.py
amazon_tracker/common/tracing/: __init__.py  middleware.py
amazon_tracker/common/utils/: __init__.py
amazon_tracker/services/: __init__.py
amazon_tracker/services/core_service/: __init__.py  main.py
amazon_tracker/services/core_service/api/v1/: alerts.py  bulk_import.py  market_trends.py  products.py  reports.py  schemas.py
amazon_tracker/services/crawler_service/: __init__.py  main.py
amazon_tracker/services/crawler_service/api/v1/: monitoring.py  products.py  schedules.py  schemas.py  tasks.py
amazon_tracker/services/monitoring/: anomaly_detector.py
amazon_tracker/services/user_service/: __init__.py  main.py
amazon_tracker/services/user_service/api/: __init__.py
amazon_tracker/services/user_service/api/v1/: __init__.py  auth.py  tenants.py  users.py
config/apisix/: apisix.dev.yaml  config.dev.yaml  config.init.yaml  config.minimal.yaml  config.simple.yaml  config.working.yaml  config.yaml
config/grafana/: grafana.ini
config/grafana/dashboards/: amazon-tracker-overview.json  apisix-observability.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: prometheus.yml
config/prometheus/: alert_rules.yml  prometheus.dev.yml  prometheus.yml  recording_rules.yml
docker/: Dockerfile.base  Dockerfile.core-service  Dockerfile.user-service  entrypoint.user-service.sh
docs/: README.md  crawler-configuration.json  database_setup.md  final_report_api_test.md  headphones-demo-specification.md  observability-guide.md  report_api_test.md  sample-data-structure.json
k8s/: README.md
k8s/base/: deployment.yaml  hpa.yaml  kustomization.yaml  secrets.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/prod/patches/: env.yaml  resources.yaml
openapi/: core_service_openapi.json  crawler-service.openapi.json  user-service.openapi.json
scripts/: apply_optimizations.py  check_env_vars.py  competitor_analysis_demo.py  comprehensive_bsr_research.py  continuous_monitoring_data.py  create_apisix_dashboard.py  create_complete_schema.py  create_indexes.py  create_mock_data_dashboard.py  create_simple_migration.py  create_test_data.py  create_test_user.py  database_partitions.sql  db_manager.py  debug_crawler_result.py  dev_manager.py  extract_asins_from_category.py  find_available_actors.py  find_free_actors.py  generate_demo_metrics.py  generate_monitoring_test_data.py  import_and_monitor_products.py  import_demo_products.py  import_headphones_demo.py  import_headphones_quick_test.py  init-db.sql  init_demo_data.py  optimized_demo_import.py  quick_monitoring_test.py  run_user_service.py  seed_data.py  send_test_123.py  setup_apisix_routes.py  setup_grafana_dashboards.py  simple_apify_test.py  simple_db_test.py  simple_demo_import.py  simple_headphones_test.py  simple_jaeger_test.py  simple_seed_data.py  (+22 more)
scripts/reports/: competitor_report_20250914_223758_report_1757831878.326827.md  test_summary_20250914_223758.json
tests/unit/services/core_service/: test_reports.py
tests/unit/services/crawler_service/: test_tasks.py
